TradeMarketing/force-app/main/default/objects/eOne_RTDS_Master__c/eOne_RTDS_Master__c.object-meta.xml
<CustomObject>
    <description>Master table to manage SmartConnect Real Time Data Sources</description>
    <label>eOne Realtime Data Source Master</label>
    <nameField>
        <label>Source Entity</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Source Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>