TradeMarketing/force-app/main/default/objects/eOne_RTDS_Master__c/fields/IsCreate__c.field-meta.xml
<CustomField>
    <fullName>IsCreate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The flag that determines if the data source is triggered off creates</description>
    <label>Is Create</label>
    <type>Checkbox</type>
</CustomField>