TradeMarketing/force-app/main/default/objects/eOne_RTDS_Master__c/fields/IsDelete__c.field-meta.xml
<CustomField>
    <fullName>IsDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The flag that determines if the data source is triggered off deletes</description>
    <label>Is Delete</label>
    <type>Checkbox</type>
</CustomField>