TradeMarketing/force-app/main/default/objects/eOne_RTDS_Master__c/fields/IsUpdate__c.field-meta.xml
<CustomField>
    <fullName>IsUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The flag that determines if the data source is triggered off updates</description>
    <label>Is Update</label>
    <type>Checkbox</type>
</CustomField>