TradeMarketing/force-app/main/default/objects/eOne_RTDS_Master__c/fields/Query__c.field-meta.xml
<CustomField>
    <fullName>Query__c</fullName>
    <description>The data source query</description>
    <label>Data Source Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>