TradeMarketing/force-app/main/default/objects/eOne_RTDS_Master__c/fields/SourceId__c.field-meta.xml
<CustomField>
    <fullName>SourceId__c</fullName>
    <description>The data source id to be triggered from SalesForce</description>
    <label>Data Source Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>